# StoryGenerator

./: .gitignore  ChangeLog.md  DataFileParser.hs  Main.hs  Makefile  Parser.hs  README.md  StoryGenerator.cabal  StoryWriter.hs  TemplateParser.hs  data.txt
src/: DataFileParser.hs  Main.hs  Parser.hs  StoryWriter.hs
