name:                StoryGenerator
version:             0.1.0.0
synopsis:            a funny stories generator
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Michael Obvious
maintainer:          michael.obviouss@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.10

executable StoryGenerator
  main-is:             Main.hs
  other-modules:        DataFileParser
                      , Parser
                      , StoryWriter
                      , TemplateParser
  -- other-extensions:    
  build-depends:        base >= 4.12 && < 5
                      , random >= 1.1 && < 1.2
                      , gi-gtk >= 3.0 && < 3.1
                      , gi-gtk-declarative >= 0.6 && < 1.0
                      , gi-gtk-declarative-app-simple >= 0.6 && < 1.0
                      , text
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
